@@ -1,6 +1,8 @@
 package guru.springframework.spring6restmvc.controller;
 
+import jakarta.validation.ConstraintViolationException;
 import org.springframework.http.ResponseEntity;
+import org.springframework.transaction.TransactionSystemException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
@@ -10,21 +12,40 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
+/**
+ * Created by jt, Spring Framework Guru.
+ */
 @ControllerAdvice
 public class CustomErrorController {
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
     ResponseEntity handleBindErrors(MethodArgumentNotValidException exception){
-    List<Map<String, String>> errorList =
-        exception.getFieldErrors().stream()
-            .map(
-                fieldError -> {
-                  Map<String, String> errorMap = new HashMap<>();
-                  errorMap.put(fieldError.getField(), fieldError.getDefaultMessage());
-                  return errorMap;
-                }).toList();
+
+        List errorList = exception.getFieldErrors().stream()
+                .map(fieldError -> {
+                    Map<String, String > errorMap = new HashMap<>();
+                    errorMap.put(fieldError.getField(), fieldError.getDefaultMessage());
+                    return errorMap;
+                }).collect(Collectors.toList());
 
         return ResponseEntity.badRequest().body(errorList);
     }
-}
 
+    @ExceptionHandler
+    ResponseEntity handleJPAViolation(TransactionSystemException exception){
+        ResponseEntity.BodyBuilder responseEntity = ResponseEntity.badRequest();
+
+        if(exception.getCause().getCause() instanceof ConstraintViolationException) {
+            ConstraintViolationException ve = (ConstraintViolationException) exception.getCause().getCause();
+
+            List<Map<String, String>> errors = ve.getConstraintViolations().stream().map(constraintViolation -> {
+                Map<String, String> errMap = new HashMap<>();
+                errMap.put(constraintViolation.getPropertyPath().toString(), constraintViolation.getMessage());
+                return errMap;
+            }).toList();
+            return responseEntity.body(errors);
+        }
+
+        return responseEntity.build();
+    }
+}
